--- a/state/templates/state/gov/bills/change_coat.html
+++ b/state/templates/state/gov/bills/change_coat.html
@@ -24,24 +24,12 @@
     {% endwith %}
 
     {% with bill=data|dict_key:'bill' %}
-    <div class="col-xs-3 col-sm-3 col-md-3">
-        <div class="row">
-            {{ bill.buy_value }}
-        </div>
-        <div class="row" style="margin-top: 25px;">
-            {{ bill.get_good_display }}
-        </div>
-    </div>
-    <div class="col-xs-3 col-sm-3 col-md-3">
-        <div class="row">
-            Лотов: {{ bill.lots_count }}
-        </div>
-        <div class="row" style="margin-top: 25px;">
-            Стоимость: <b style="color: #85bb65">${{ bill.cash_cost }}</b>
-        </div>
+    <div class="col-xs-4 col-sm-6 col-md-6" style="vertical-align: middle;">
+        <img src="{{ bill.image.url }}" width="50" height="50">
+        <a href='{{ bill.image.url }}' target="_blank"><u>оригинал</u></a>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
-    <a href='/profile/{{ bill.initiator.pk }}' target="_blank">{{ bill.initiator }}</a>
+        <a href='/profile/{{ bill.initiator.pk }}' target="_blank">{{ bill.initiator }}</a>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
     {% with is_deputy=data|dict_key:'is_deputy' %}
@@ -49,10 +37,10 @@
             {% with player=data|dict_key:'player' %}
                 {% if player not in bill.votes_pro.all and player not in bill.votes_con.all %}
                 <div class="row">
-                    <a class="btn btn-success" onclick="vote_bill('PurchaseAuction',{{ bill.pk }},'pro')">Проголосовать</a>
+                    <a class="btn btn-success" onclick="vote_bill('ChangeCoat',{{ bill.pk }},'pro')">Проголосовать</a>
                 </div>
                 <div class="row">
-                    <a class="btn btn-danger" onclick="vote_bill('PurchaseAuction',{{ bill.pk }},'con')">Проголосовать</a>
+                    <a class="btn btn-danger" onclick="vote_bill('ChangeCoat',{{ bill.pk }},'con')">Проголосовать</a>
                 </div>
                 {% else %}
                 <font size="5">
