--- a/state/templates/state/gov/reviewed/change_title.html
+++ b/state/templates/state/gov/reviewed/change_title.html
@@ -27,7 +27,7 @@
     {{ bill.new_title }}
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
-    {{ bill.initiator }}
+    <a href='/profile/{{ bill.initiator.pk }}' target="_blank">{{ bill.initiator }}</a>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
         <div class="row">
