--- a/state/templates/state/gov/bills/explore_resources.html
+++ b/state/templates/state/gov/bills/explore_resources.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
-    {{ bill.initiator }}
+    <a href='/profile/{{ bill.initiator.pk }}' target="_blank">{{ bill.initiator }}</a>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
     {% with is_deputy=data|dict_key:'is_deputy' %}
