--- a/state/templates/state/gov/reviewed/construction.html
+++ b/state/templates/state/gov/reviewed/construction.html
@@ -52,7 +52,7 @@
         {% endwith %}
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
-    {{ bill.initiator }}
+    <a href='/profile/{{ bill.initiator.pk }}' target="_blank">{{ bill.initiator }}</a>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
         <div class="row">
