--- a/player/static/overview.css
+++ b/player/static/overview.css
@@ -38,8 +38,8 @@
 .message__text {
   padding: 10px;
   border-radius: 10px;
-  border: 1px solid #69b4f3;
-  background-color: #bfe2ff;
+/*  border: 1px solid #69b4f3;*/
+/*  background-color: #bfe2ff;*/
   max-width: 70%;
 }
 
@@ -54,6 +54,6 @@
   order: 1;
   margin: 0 0 0 10px;
 }
-.message--user-2 .message__text {
+/*.message--user-2 .message__text {
   background-color: #69b4f3;
-}
+}*/
