--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -119,7 +119,7 @@
                           </button>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
-                        <button type="button" class="btn btn-primary js-crop-and-upload">Загрузить, -100 G</button>
+                        <button type="button" class="btn btn-primary js-crop-and-upload">Загрузить{% if player.image %}, -100 G{% endif %}</button>
                       </div>
                     </div>
                     </div>
