--- a/player/templates/player/player_status.html
+++ b/player/templates/player/player_status.html
@@ -7,35 +7,38 @@
             <img {% if player.image %}src="{{ player.image.url }}"{% else %}src="{% static 'img/nopic.png' %}"{% endif %} width="80px" height="80px">
         </a>
     </div>
-    <div class="col-xs-2 col-sm-2 col-md-2">
-        <div class="row" id="nickname">{{ player.nickname }}</div>
-        <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-6" align="left">
-                <script>
-                    const locked_txt = 'Заблокировано: $';
-                </script>
-                <b style="color: #85bb65; cursor: pointer" id="cash" {% localize off %} data-text="{{ player.cash }}" {% endlocalize %}
-                                     data-toggle="tooltip" data-placement="bottom" title="Заблокировано: ${% if locked %}{{ locked }}{% else %}0{% endif %}"
-                                    onclick="window.location.href = '/wallet/'">
-                    ${{ player.cash }}
-                </b>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-                <b style="color: gold" id="gold" data-text="{{ player.gold }}">{{ player.gold }}</b>
-            </div>
+    <div class="col-xs-2 col-sm-2 col-md-1">
+<!--        <div class="row" id="nickname">{{ player.nickname }}</div>-->
+        <div class="row" align="left" style="margin-top: 10px">
+            <script>
+                const locked_txt = 'Заблокировано: $';
+            </script>
+            <b style="color: #85bb65; cursor: pointer" id="cash" {% localize off %} data-text="{{ player.cash }}" {% endlocalize %}
+                                 data-toggle="tooltip" data-placement="bottom" title="Заблокировано: ${% if locked %}{{ locked }}{% else %}0{% endif %}"
+                                onclick="window.location.href = '/wallet/'">
+                ${{ player.cash }}
+            </b>
+        </div>
+        <div class="row" align="left" style="margin-top: 10px">
+            <b style="color: gold" id="gold" data-text="{{ player.gold }}">{{ player.gold }}</b>
         </div>
     </div>
-    <div class="col-xs-8 col-sm-8 col-md-8">
+    <div class="col-xs-2 col-sm-2 col-md-2">
         <script>
-            const energy_txt = 'энергии: ';
             const refill_button_txt = 'Пополнить';
         </script>
-        <div class="row" id="energy">энергии: {{ player.energy }}%</div>
-        <div class="row">
+        <div class="row" align="center">
+            <img src="{% static 'img/energy.svg' %}" width="20px" height="20px" style="display: inline-block;">
+            <div id="energy" style="display: inline-block;">
+            {{ player.energy }}%
+            </div>
+        </div>
+        <div class="row" align="center">
             <script>
                 const csrftoken = '{{ csrf_token }}';
             </script>
-            <button type="submit" id="refill-countdown" data-text="{{ countdown }}" onclick="recharge()" class="save btn btn-default">
+            <button type="submit" id="refill-countdown" data-text="{{ countdown }}" onclick="recharge()" class="save btn btn-default"
+                    style="width: 100px;">
                 {% if time_text %}
                 {{ time_text }}
                 {% else %}
@@ -43,5 +46,13 @@
                 {% endif %}
             </button>
         </div>
+        {% if increase_time %}
+        <div class="row" align="center" id="increase_line">
+            <div style="display: inline-block;" id="increase_value" data-value="{{ increase_value }}">+{{ increase_value }}</div>
+            <img src="{% static 'img/energy.svg' %}" width="20px" height="20px" style="display: inline-block;">
+            <div style="display: inline-block;">:</div>
+            <div style="display: inline-block;" id="increase-countdown" data-text="{{ increase_time }}">{{ increase_text }}</div>
+        </div>
+        {% endif %}
     </div>
 </div>
