фикс невозможности удалять с чата

--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load bootstrap3 %}
 {% load stickers.stickers_advice %}
-{% load i18n %}
+{% load l10n %}{% load i18n %}
 {% block for_scripts_and_css %}
 {% load dict_key %}
 {% load get_attr %}
