--- a/player/templates/player/overview.html
+++ b/player/templates/player/overview.html
@@ -40,7 +40,11 @@
     <div class="row">
         <div class="col-xs-2 col-sm-2 col-md-2" align="left" onclick="window.location.href = '/world/players/'"  style="cursor: pointer">Игроков: {{ world_pop }}</div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left" onclick="window.location.href = '/world/parties/'"  style="cursor: pointer">Партий: {{ world_parties }}</div>
-        <div class="col-xs-2 col-sm-2 col-md-2" align="left"></div>
+        <div class="col-xs-2 col-sm-2 col-md-2" align="center">
+            {% if has_voting %}
+            <a href="{% url 'pres_elections' pres_pk=president.pk %}" class="btn btn-danger">Выборы президента</a>
+            {% endif %}
+        </div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left" onclick="window.location.href = '/region/{{ player.region.pk }}/players/'"  style="cursor: pointer">Игроков: {{ region_pop }}</div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left" onclick="window.location.href = '/region/{{ player.region.pk }}/parties/'"  style="cursor: pointer">Партий: {{ region_parties }}</div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left"></div>
