--- a/bill/templates/state/gov/bills/change_form.html
+++ b/bill/templates/state/gov/bills/change_form.html
@@ -25,7 +25,7 @@
 
     {% with bill=data|dict_key:'bill' %}
     <div class="col-xs-6 col-sm-6 col-md-6">
-        {{ bill.get_new_form_display }}
+        {{ bill.get_form_display }}
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
         <div class="row">
