--- a/party/templates/primaries/primaries.html
+++ b/party/templates/primaries/primaries.html
@@ -2,8 +2,7 @@
 {% load static %}
 {% load l10n %}{% load i18n %}
 {% block for_scripts_and_css %}
-<link rel="stylesheet" type="text/css" href='{% static "css/overview.css" %}'/>
-<script src="{% static 'primaries.js' %}?{{ csrf_token }}"></script>
+<script src="{% static 'js/primaries.js' %}?{{ csrf_token }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -59,7 +58,8 @@
                             {% if can_vote %}
                                 {% if not vote %}
                                     {% if candidate != player %}
-                                    <a href="{% url 'vote_primaries' party_pk=candidate.party.pk player_pk=candidate.pk %}">
+                                    <a style="cursor: pointer"
+                                            onclick="vote_prims(this)" data-party="{{ candidate.party.pk }}" data-candidate="{{ candidate.pk }}">
                                         <h3>
                                             <font color="green">
                                                 <div class="glyphicon glyphicon-plus">
